--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12927025.md#1" title="五大驱动力重塑中欧关系 欧盟对中共更强硬""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/000_1TW38C-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12927215.md#1" title="程晓农：“全球暖化”为何失踪了？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2016/02/1509142235271538-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://odhwcb357.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12929211.md#1">德国反对美国放弃疫苗专利权 疫苗股反弹</a><br>
-:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928488.md#1">常喝绿茶的五大好处和副两个作用</a><br>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12929199.md#1">布林肯：习近平若下令攻台 将犯下严重错误</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928477.md#1">英国德比郡史上首现一对父女消防员</a><br>
+:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12929211.md#1">德国反对美国放弃疫苗专利权 疫苗股反弹</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928488.md#1">常喝绿茶的五大好处和两个副作用</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12929199.md#1">布林肯：习近平若下令攻台 将犯下严重错误</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928477.md#1">英国德比郡史上首现一对父女消防员</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12929322.md#1">传华人女翻译跟比尔?盖茨婚变有关 当事人辟谣</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12929315.md#1">海外民运人士：中共渗透从未歇但亦无用</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12929315.md#1">海外民运人士：中共渗透从未歇但亦无用</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925298.md#1">对文革看法引发中共红二代争执 陶斯亮删文</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925067.md#1">【翻墙必看】分析：习对李克强或有新安排</a><br>
@@ -102,7 +102,7 @@
 ```diff
 !退出中共党、团、队总人数:
 
-!共 376,846,786 人
+!共 376,846,802 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928498.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12928691-WhatsApp-Image-2021-05-06-at-10.56.02-PM-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928498.md#1">中共打压外卖骑士联盟 推“模范外卖员”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926843.md#1">四川大学生家遭强拆 父子睡在废墟上</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926001.md#1">牛腾宇首见母亲曝黑幕 坚信真相会大白天下</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926601.md#1">《马三家来信》网上放映会 中共奴工产品再成焦点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924228.md#1">成都近八旬法轮功学员遭冤判两年 劫入监狱</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924497.md#1">西安千亿城改涉黑案受害人：中国无法律</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929183.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/05/GettyImages-1141632111-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929183.md#1">浑水创始人吁除牌中概股 以根除诈欺行为</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928199.md#1">A股三大股指收跌 疫苗股重挫致创指跌2.48%</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927932.md#1">38家银行赚走A股42%净利 总市值仅占1/8</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927331.md#1">印度疫情肆虐 中资在印手机厂产能下跌40%</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927433.md#1">传腾讯与CFIUS磋商 冀保留2家美游戏公司股权</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12927106.md#1">大量外籍人士离港以及经济衰退 香港房租大跌</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929361.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926120-GettyImages-1232671507-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929361.md#1">布林肯称西方国家须谨慎于中共投资</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929219.md#1">知名党校教授赞加国福利 遭五毛围攻关微博</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929206.md#1">准备开会途中 湖南一局长突发疾病死亡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928454.md#1">如何跨部门合作对抗假资讯 台湾专家提四建议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928333.md#1">河南涉黑案牵出12个保护伞 政法委书记涉案</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927639.md#1">G7外长会首度强调台海和平 支持台湾国际参与</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928741.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926688-GettyImages-1232681331-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928741.md#1">中国侨民自曝经历 中共偷偷禁国人从印度返国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926177.md#1">京津冀等11省市再遇沙尘天气 京沪有大风</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925594.md#1">河南洛阳高铁桥附近着火 部分列车晚点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925414.md#1">五一大陆四省高速路现车祸 至少18死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925161.md#1">四川绵阳3.6级地震变10级 微博再闹乌龙</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924665.md#1">8省遭暴雨 北京等机场超200架次航班取消</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928256.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928256.md#1">长沙幼儿园教师踢掉男童门牙 将监视器格式化</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927726.md#1">爱奇艺选秀节目被停播 粉丝买奶倒奶视频热传</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927545.md#1">三退声明精选（2021/05/05）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925426.md#1">学者：中共百年之际 内外高压政权岌岌可危</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12924953.md#1">成都男子长期吃生肉 脑内长满虫子</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12923174.md#1">广西初中女生三米高树上吊亡 家属：疑点重重</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925387.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12925442-yanghui2FotoJet-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925387.md#1">律师详析刑法300条：制造冤案 应予废除（下）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12924988.md#1">律师详析刑法300条：制造冤案 应予废除（上）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12922204.md#1">党媒宣扬教师出资给留守儿童改善伙食 挨轰</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920900.md#1">台湾诗人管管跌倒昏迷辞世 享寿92岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918565.md#1">美下周恢复中国学生签证处理 部分专业受限</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917687.md#1">安徽一小学老师被停职 烫伤殴打多名学生</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/27/n12909575.md#1">【独家】中共推光伏产业 拜登堕气候陷阱</a><br>
