--- a/gb/news2008_3.md
+++ b/gb/news2008_3.md
@@ -1,4 +1,13 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12913831.md#1" target="_blank">为身体排毒的8种方法 几小时内就能做到</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12913831.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12913901-shutterstock_528750850-150x120.jpg" align ="left"></a>晚上外出就餐喝酒，多喝了几杯；或吃多了非健康食品，如薯条等，醒来时会感到迟钝，这就是你需要给身体排毒了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 2:55 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12912664.md#1" target="_blank">大多伦多地区新建房价飙升 货源新低</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12912664.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12913986-18847759-150x120.jpg" align ="left"></a>大多伦多地区建筑行业和土地发展协会（BILD）周一（4月26日）表示，今年3月，大多区新建单家庭住宅的基准价飙升至创记录的144万元，同比增长了29.4%。公寓价格年同比增长8.3%，基准价达到104万元。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 9:23 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12913522.md#1" target="_blank">神奇的“高效日” 突破时间不够用的问题</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12913522.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/02/Fotolia_129081796_Subscription_L-150x120.jpg" align ="left"></a>手机短信、电子邮件、领英（Linkedin）、脸书信息??时间在频繁的信息更新中被切得片段而琐碎，想要集中精力做点事颇具挑战。虽说“忙人出活”，但疲劳战无益健康。一天只有二十四小时，堆积如山的待办事项该如何消化？如想提高效率，最大化成果，不妨尝试每周一天的“高效日”，翻转滞后的现状。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 8:20 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12913762.md#1" target="_blank">【重播】印度疫情失控 危及全球？</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12913762.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12913769-4.29.21-web-Health-Live-150x120.jpg" align ="left"></a>印度疫情失控，每1分钟有2人死亡！
+
+双变种夹击！印度变种疯传17国，是否将危及全球？
+
+现在打疫苗，能否阻止病毒传播？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 8:09 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/19/n12890338.md#1" target="_blank">家有爱犬 为狗狗准备元气防癌餐3要点</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/19/n12890338.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/shutterstock_777364135-150x120.jpg" align ="left"></a>狗狗得了癌症，怎么办？针对没有食欲或挑食的爱犬，如何准备兼具营养和美味的抗癌元气餐，日本权威兽医须崎恭彦禅传授秘诀。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 7:41 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12913478.md#1" target="_blank">英最高云霄飞车停摆 游客被迫从65米高爬下</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12913478.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12913487-roller-coaster-4830861_1920-150x120.jpg" align ="left"></a>英国最高的云霄飞车（过山车）日前在接近最高的轨道上发生故障，动弹不得，导致车上的游客必须从几十公尺高的轨道上走回地面，让人看得心惊胆跳。所幸所有游客都平安无事。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 6:21 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906456.md#1" target="_blank">扩充休闲空间 后院改造10个创意点子DIY</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906456.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906659-shutterstock_1170474241-150x120.jpg" align ="left"></a>暖风徐徐、阳光耀眼，春回大地的美好生活莫过于出外踏青了！但是，如果外出条件不允许怎么办呢？推荐你另一项便捷的选择，就算防疫在家也适用，运用创意把屋内空间延展到户外后院，不用花钱或是小额预算也能轻松打造一处休闲舒适的场所，一举两得。以下提供10个创意设计的想法让你帮自家后院重新美化，立马有焕然一新的感受。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 3:33 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12913163.md#1" target="_blank">北极熊幼崽被俄罗斯矿工驯服 跟小狗一样乖</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12913163.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12913165-shutterstock_1896810685-150x120.jpg" align ="left"></a>布尔什维克岛（Bolshevik Island）是位于北冰洋上北地群岛（evernaya Zemlya archipelago）最南的一个岛屿，为俄罗斯领土。岛上一只孤儿北极熊被当地的金矿矿工喂养和驯服，如同小狗一样，会与矿工们一起玩耍。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 2:47 PM			</td></tr>
@@ -32,22 +41,5 @@
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906178.md#1" target="_blank">机器人建房成新趋  西澳首栋房产将拍卖</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906178.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906186-5d4047799c06a85056376bb1e6945f56-150x120.jpg" align ="left"></a>一栋由机器人砌墙的新房本周将上市，西澳建房领域的砌砖新科技将面临首次公开测试。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 11:24 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906857.md#1" target="_blank">生理期3饮品瘦身 还能补钙、消水肿、解便秘</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906857.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906971-black-fungus-454125241-150x120.jpg" align ="left"></a>生理期是减肥的好时机，根据月经周期安排瘦身计划，佐以不同的运动与饮食，减肥效果事半功倍，还能补钙、消水肿、解便秘。月经前期觉得烦躁，很想吃东西，又怕吃进太多热量，那么可以吃高纤维、低热量的食物。黑木耳露是适合月经前期的一款瘦身饮品。月经期间要多补充消肿、活血及帮助子宫收缩的食物。例如：黑豆、红豆水......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 6:28 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906727.md#1" target="_blank">心脏病偏爱5种人 一定要警惕</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906727.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906853-heart-disease_1557842870-150x120.jpg" align ="left"></a>如今，心血管疾病已经成为全球头号杀手。久坐、肥胖者等5类人容易得心脏病，不得不谨慎。心脏病偏爱人群之一：久坐不动者。久坐不动对心脏的危害。人如果坐的时间很长，心的工作量就会减小，心脏功能减退，血液循环变慢，血液中的脂质更容易在动脉管壁沉积，血脂自然就高了。不注意调理的话，很容易发生动脉粥状硬化等疾病。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 2:01 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906782.md#1" target="_blank">房市热钱滚滚 上市好时机 买房仍要谨慎</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906782.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906817-3558cb03359599e66d0628cf20633a01-150x120.jpg" align ="left"></a>文：Joyce Zhao?湾区房地产经纪
-突如其来的COVID-19，把大家的2020年搅得支离破碎，2021年开年，房市的超常火爆大概又一次出乎许多人的预料。伴随着政府货币超发，股市持续攀升，疫苗逐渐普及，失业率稳定下降，这一波的房市上涨不仅仅是加州湾区，而是全美甚至是国际上许多地区的普遍现象。
-
-Santa .........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 1:25 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906661.md#1" target="_blank">脸部SPA修护升级 保养细嫩肌肤</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906661.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906663-491956-150x120.jpg" align ="left"></a>每个人都希望拥有细致无瑕的肌肤，而想要拥有光泽又有弹性的肌肤，先决条件是解决毛孔粗大、泛油长痘痘等皮肤问题。然而，大部分的民众购买保养品保养自己的肌肤时，保养品有无发挥效果则不得而知。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 12:16 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906569.md#1" target="_blank">2021东湾房市3月份最新数据（上）</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906569.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906605-San-Ramon-SFH-statistics-03-2021-150x120.jpg" align ="left"></a>2021年三月份东湾房市，统计销售中位数价格、库存、待售出、售出数量等多个房市数据。
-
-东湾房市：核桃溪（Walnut Creek）独立房市场销售状况摘要
-· 3月份期间新上市的独立房屋共有27栋。（2月份：36）
-· 3月份期间售出的独立住宅共有55栋。（2月份：37）
-· 3月份的中间售价高达152.5万.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 11:16 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906461.md#1" target="_blank">2021旧金山湾区房价 3月份销售一览（下）</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12906461.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906495-1fcedb6f1351a056e762cd34e83d3378-150x120.png" align ="left"></a>以下表格即是2021年3月份，湾区部分城市的房产销售一览。
-注：房型CO是康斗，DE是独立房
-资料来源：旧金山、南湾、东湾MLS
-以上数据由星河地产（Starriver Realty）房地产经纪Jason（Zhenhua）Tao（BRE：01869132）提供
-Jason Tao熟悉旧金山、湾区房地产市场。联络.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 10:07 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12905575.md#1" target="_blank">“我跟你回家好不好？” 台网友曝榕树托梦</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12905575.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12905579-banyan-tree-1049021_1280-150x120.jpg" align ="left"></a>人们常说：“万物皆有灵。”动物和植物虽然不会说人话，但它们可能知道人们心里在想什么，而且能以另类方式与人们沟通。最近在台湾就有一名女网友分享了榕树爷爷跟她托梦的奇缘，其结局让人们觉得暖心。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 7:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/news2008_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2008_4.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/odhwcb357/djy/blob/master/gb/news2008_3.md#1<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/news2008_3.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/odhwcb357/djy/blob/master/gb/news2008_3.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2008_3.htm">https://www.epochtimes.com/gb/news2008_3.htm</a>    （国内需<a href="https://github.com/odhwcb357/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
