--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -2,7 +2,7 @@
 <tr><td width="742"><h3><a href="https://github.com/jzsnhw327/djy/blob/master/gb/21/5/6/n12929582.md#1" target="_blank">胃痛不要揉肚子！做错8件事 伤害你的胃</a><br></h3><a href="https://github.com/jzsnhw327/djy/blob/master/gb/21/5/6/n12929582.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12929660-shutterstock_1708854853-copy-320x200.jpg" align ="left"></a>胃痛不要用力揉肚子、感冒别乱吃药？做错8件事可能伤害你的胃，甚至引发胃病。感冒、发热时许多人都会服用成药。但若是选用不当，这些药物极易造成胃部损伤，引发胃病。有些治疗感冒的药物会刺激胃黏膜，造成溃疡发生。罹患胃病的原因中，有近一半以上都是压力大，缺乏适当的运动和充足的睡眠所造成。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月07日 7:45 AM	</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jzsnhw327/djy/blob/master/gb/21/5/6/n12928488.md#1" target="_blank">常喝绿茶的五大好处和两个副作用</a><br></h3><a href="https://github.com/jzsnhw327/djy/blob/master/gb/21/5/6/n12928488.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12928492-FmAYutel-600x400-150x120.jpeg" align ="left"></a>绿茶是未经发酵制成的茶，保留了鲜叶的天然物质，营养丰富。绿茶是用茶树的叶子蒸、煎、烘干而成。它是世界上最受欢迎的饮料之一，已经有数千年的历史。下面我们就来看一下绿茶的功效与副作用。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月07日 4:47 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jzsnhw327/djy/blob/master/gb/21/4/28/n12909895.md#1" target="_blank">掉发、秃头 2种偏方有效吗？中医3招助生发</a><br></h3><a href="https://github.com/jzsnhw327/djy/blob/master/gb/21/4/28/n12909895.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12910695-shutterstock_1927290485-150x120.jpg" align ="left"></a>大量掉发会影响外观，抹米酒、生姜或生发水、生发洗发精，就能让头发再长回来吗？淮元中医诊所主治医师许腾鸿指出，中医看掉发，主要与肝、肾、脾胃等会影响气血生成与运行的脏腑有关，这些脏腑造成掉发的因素都不同。身体若出状况，通常不会立即就掉发，会先有2个征兆：毛色、发质改变；头皮出油、头皮痒。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 10:11 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jzsnhw327/djy/blob/master/gb/21/5/4/n12922718.md#1" target="_blank">番茄防癌、减肥又增免疫力 这样吃最营养</a><br></h3><a href="https://github.com/jzsnhw327/djy/blob/master/gb/21/5/4/n12922718.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12927539-shutterstock_143668231-150x120.jpg" align ="left"></a>番茄又称西红柿，可分为大番茄、小番茄。食品科学博士、营养师陈小薇指出，大番茄属于蔬菜，甜度底，热量低，100公克只有17大卡。每100公克的膳食纤维比小番茄略少一些。小番茄属于水果，甜度高，热量也高，同样100公克，红色小番茄为30大卡，橙色小番茄是29大卡。茄红素抗氧化力是β-胡萝卜素的2倍，对人体4大好处。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 9:49 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jzsnhw327/djy/blob/master/gb/21/5/4/n12922718.md#1" target="_blank">番茄防癌、增免疫力  加一步骤吃最营养</a><br></h3><a href="https://github.com/jzsnhw327/djy/blob/master/gb/21/5/4/n12922718.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12927539-shutterstock_143668231-150x120.jpg" align ="left"></a>番茄又称西红柿，可分为大番茄、小番茄。食品科学博士、营养师陈小薇指出，大番茄属于蔬菜，甜度底，热量低，100公克只有17大卡。每100公克的膳食纤维比小番茄略少一些。小番茄属于水果，甜度高，热量也高，同样100公克，红色小番茄为30大卡，橙色小番茄是29大卡。茄红素抗氧化力是β-胡萝卜素的2倍，对人体4大好处。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 9:49 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jzsnhw327/djy/blob/master/gb/21/5/6/n12928480.md#1" target="_blank">【重播】新冠病毒爱脂肪？正确减肥防中招</a><br></h3><a href="https://github.com/jzsnhw327/djy/blob/master/gb/21/5/6/n12928480.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12928491-5.6.21-web-Health-Live-150x120.jpg" align ="left"></a>新冠病毒更喜欢脂肪组织？
 
 肥胖年轻人感染新冠，比普通人更重？正确减肥防中招！
