--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -24,14 +24,12 @@
 <tr><td width="742"><h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/2/n12919635.md#1" target="_blank">境界高远处方神验的清代名医薛雪</a><br></h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/2/n12919635.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12923721-1511212054422483-600x400-150x120.jpeg" align ="left"></a>在清代康乾盛世之年，江苏吴县出了一位“多学能诗”、“工画兰，善拳勇”的名医，他就是薛雪。薛雪，字生白，生于康熙二十年（1681年），卒于乾隆三十五年（1770年）。他博学多通，为人洒脱、性情豁达，连所居住的山庄也“有花竹林泉之胜”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 6:58 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/4/26/n12906320.md#1" target="_blank">天堂梦（122）</a><br></h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/4/26/n12906320.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/Heaven--150x120.jpg" align ="left"></a>要各地按大跃进上报的粮食产量数字，向农民强征粮食，搜刮出更多的粮食。农民因粮食被征光没有粮食吃，开始浮肿饿死。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 3:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/4/n12923228.md#1" target="_blank">困知勉行—徐明义画集8—月夜（彩墨）</a><br></h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/4/n12923228.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12923236-a63c4f2cdde581d0b094a3efc3979bc1-150x120.jpg" align ="left"></a>宋?杨万里有一对诗句：“溪边小立苦待月，月知人意偏迟出。”诗人知道那晚一定会有月亮，他痴等月儿出来，哪知月儿好像知人意似的，偏偏迟迟不出来——月亮出来或不出来，都可以写成诗喔。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 2:42 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/7/n12929991.md#1" target="_blank">如何有效地帮助孩子学练弹钢琴</a><br></h3>孩子学琴，既可以培养音乐素养，又能够开智开慧，因此许多家长都希望孩子能学手好琴。但良好的愿望是一方面，孩子学琴的过程并不总如音乐般美妙，家长该以什么样的心态来带孩子，如何有效地帮到孩子呢？卡尔加里钢琴老师林沃恩接受本报采访，分享了他的经验和心得。
-
-林沃恩老师生于香港，曾就读于匈牙利李斯特音乐学院、加拿大布兰顿大学.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月07日 12:15 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12926484.md#1" target="_blank">菩萨蛮．春天别走</a><br></h3>抚头犹似亲人手，牵衣缱绻河堤柳。 梨落有山丁，花开赛晚樱。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月07日 12:07 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12926547.md#1" target="_blank">歌词：真善忍颂</a><br></h3> 真善忍 真善忍 三字真言 真理无上 真理力量势不可当 真理光芒照彻穹苍......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12926454.md#1" target="_blank">诗歌：雨后暮春（外一首）</a><br></h3>雨霁天青光彻地， 园宁心静气湉湉。 风标不转闲慵懒， 蜂蝶乱飞忙正欢。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 12:10 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/4/n12924391.md#1" target="_blank">藏头诗：初夏</a><br></h3> 立竿不见影 夏日照头顶 小小一口井 满满水清清......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月05日 12:33 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/4/n12924368.md#1" target="_blank">七律：暮春隆</a><br></h3>深浓画面暮春中， 绘彩飘香尽日风。 转翠崇山明丽日， 渐清流水映芳丛。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月05日 12:21 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/4/n12924372.md#1" target="_blank">歌词：法光照在花儿上（七重叠）</a><br></h3>时令花开月月常，春夏秋冬品花良。 法光照在花儿上，千花万朵敬圣王！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月05日 12:07 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/3/n12921798.md#1" target="_blank">采桑子．春之雷阵雨（外一首）</a><br></h3> 长风起处浓云滚， 一霎天冥，一霎楼冥， 遍撒甘霖细细倾。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/hbdsrs3314/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2007.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hbdsrs3314/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007.htm">https://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://github.com/hbdsrs3314/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
